@@ -472,6 +472,7 @@ set auto_index(reconfig_gui_default) [list source [file join $dir openw.tcl]]
 set auto_index(reconfig_mmenu) [list source [file join $dir menu.tcl]]
 set auto_index(reid) [list source [file join $dir reid.tcl]]
 set auto_index(releasemv) [list source [file join $dir mview.tcl]]
+set auto_index(remap_mater) [list source [file join $dir remap_mater.tcl]]
 set auto_index(remat) [list source [file join $dir remat.tcl]]
 set auto_index(rpp-arch) [list source [file join $dir accel.tcl]]
 set auto_index(rpp-cap) [list source [file join $dir accel.tcl]]
@@ -723,6 +724,7 @@ set auto_index(sph-part) [list source [file join $dir accel.tcl]]
 set auto_index(stack_add) [list source [file join $dir shaders.tcl]]
 set auto_index(stack_delete) [list source [file join $dir shaders.tcl]]
 set auto_index(stack_insert) [list source [file join $dir shaders.tcl]]
+set auto_index(string_is_digit_strict) [list source [file join $dir remap_mater.tcl]]
 set auto_index(tab_expansion) [list source [file join $dir text.tcl]]
 set auto_index(text_op_begin) [list source [file join $dir text.tcl]]
 set auto_index(text_paste) [list source [file join $dir text.tcl]]
